# model-track-cr

./: .bandit  .coveragerc  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LOCAL_SETUP_GUIDE.md  Makefile  README.md  README.pt-br.md  SESSION_SUMMARY.md  pr_body.md  pr_body_41.md  pr_description_issue_48.md  pyproject.toml  pytest.ini  pytest_out.txt  pytest_out3.txt  sonar-project.properties  sonar_github_issues.py  sonar_issues.md  test_output.txt
.agent/skills/git-workflow/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  sonar.yml
documentation/: TESTING_STRATEGY.md  TESTING_STRATEGY.pt-br.md  WORKFLOW.md
notebooks/: ieee_fraud_eda_baseline.ipynb  multiclass_example.ipynb
src/model_track/: __init__.py  base.py  context.py
src/model_track/binning/: __init__.py  bin_applier.py  quantile_binner.py  tree_binner.py
src/model_track/evaluation/: __init__.py  base.py  binary.py  decision_table.py  multiclass.py  regression.py
src/model_track/preprocessing/: __init__.py  auditor.py  encoders.py  memory.py  types.py
src/model_track/stability/: __init__.py  psi.py  report.py
src/model_track/stats/: __init__.py  metrics.py  multiclass_selection.py  regression_selection.py  selection.py
src/model_track/utils/: __init__.py
src/model_track/woe/: __init__.py  calculator.py  ovr_adapter.py  stability.py
tests/: test_placeholder.py
tests/benchmarks/: test_performance.py
tests/integration/: test_binning_context.py  test_context_compatibility.py  test_decision_table_notebook.py  test_evaluation_context.py  test_full_workflow.py  test_multiclass_pipeline.py  test_stability_flow.py
tests/integration/stability/: test_psi_integration.py
tests/statistical/: test_business_invariants.py  test_invariants.py  test_woe_invariants.py
tests/statistical/evaluation/: test_binary_properties.py  test_metric_properties.py
tests/statistical/stability/: test_psi_properties.py
tests/unit/: test_base.py  test_context.py  test_stability.py
tests/unit/binning/: test_bin_applier.py  test_quantile_binner.py  test_tree_binner.py
tests/unit/evaluation/: test_binary_evaluator.py  test_decision_table.py  test_multiclass_evaluator.py  test_regression_evaluator.py
tests/unit/preprocessing/: test_auditor.py  test_encoders.py  test_memory.py  test_types.py
tests/unit/stability/: test_multiclass_psi.py  test_psi_calculator.py  test_regression_psi.py  test_stability_report.py
tests/unit/stats/: test_metrics.py  test_multiclass_selector.py  test_regression_selector.py  test_selection.py
tests/unit/woe/: test_calculator.py  test_ovr_adapter.py  test_stability.py  test_stability_perf.py
