[project]
name = "model-track-cr"
version = "0.1.0"
description = "Feature selection and model monitoring toolkit for credit and risk modeling."
authors = [
    { name = "Cristiano", email = "cristiano2132.ufv@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.23,<2.0",
    "pandas>=1.5,<3.0",
    "scikit-learn>=1.2,<2.0",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.12,<0.14",
    "bayesian-optimization==1.4.3",
    "lightgbm>=4.3.0,<5.0.0",
    "joblib>=1.3.0",
    "pygments (>=2.20.0,<3.0.0)"
]

[tool.poetry]
# Mantendo o mapeamento para a pasta src
packages = [{ include = "model_track", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = ">=4.1,<6.0"
ruff = ">=0.1.0"
mypy = ">=1.8.0"
bandit = ">=1.7.5"
pip-audit = ">=2.7.0"
pre-commit = ">=3.5.0"
hypothesis = ">=6.80.0"
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# -----------------------------
# Ruff (Linting & Formatting)
# -----------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["model_track"]

# -----------------------------
# Pytest & Coverage
# -----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=model_track",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=90",
]
markers = [
    "unit: Testes unitários rápidos",
    "statistical: Testes de propriedade com Hypothesis",
    "integration: Testes de fluxo completo",
    "benchmark: Testes de performance",
]

# -----------------------------
# MyPy (Type Checking)
# -----------------------------
[tool.mypy]
python_version = "3.10"
mypy_path = "src"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
